--- a/_posts/2018-12-18-2018-MongoDB-Notes.md
+++ b/_posts/2018-12-18-2018-MongoDB-Notes.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: .NET Development with Jenkins (Work In Progress)
+title: MongoDB Notes (Work In Progress)
 tags: [MongoDB, NoSQL]
 comment: false
 ---
