Update to MongoDB Notes Post

--- a/_posts/2018-12-18-2018-MongoDB-Notes.md
+++ b/_posts/2018-12-18-2018-MongoDB-Notes.md
@@ -7,34 +7,51 @@ comment: false
 
 # MongoDB Notes
 
-Unfortunately, at the time when I decided to start documenting my experimentation with MongoDB, I had already deployed a replica set. This post will assume that you have a working MongoDB instance.
+Unfortunately, at the time when I decided to start documenting my experimentation with MongoDB, I had already deployed a replica set. This post assumes that you have a working MongoDB instance or you're looking to get an overview of the technology. 
 
 ## Context
-My organization is currently experimenting with MongoDB to store records that contain information of the modified items (previous value, modified value, field, username, etc) . We've turned to MongoDB since the records will be dynamic and may evolve as a product catalog grows..  
 
-## Terminology 
+My organization is currently experimenting with MongoDB to store records that contain information of the modified items (previous value, modified value, field, username, etc) . We've turned to MongoDB since the records will evolve as our product catalog grows.  
 
-* A "Replica Set" is a _group of MongoDB instances (3 or more) that maintain the same data set_. This is how MongoDB can ensures high availability. 
+## What is a Replica Set?
+
+* A "Replica Set" is a _group of MongoDB instances (3 or more) that maintain the same data set_. This is how MongoDB facilitates high availability.
+
 * A Replica set can have multiple nodes reflecting the primaries data set.
-* Must have only one primary capable of confirming writes. 
-* The rest of the "data nodes" reflect the primaries data set.
-* If primary is unavailable, an eligible secondary will hold an election to elect itself the new primary.
+
+* In a Replica set of *3 mongod* instances you must have **one** primary capable of confirming writes. This results in two scenarios:
+	1. The replica set will have have a primary and two secondaries.
+	2. The replica set will have have a primary, secondary, and an "Arbiter"  
+
+* The rest of the nodes reflect the primaries data set.
+
+* If the primary node is unavailable, an eligible secondary node will hold an election to elect itself the new primary.
+ 
+* Replica set members send pings "heartbeats" to each other every 2 seconds. When a ping takes longer than 10 seconds an election process takes place.
+
 * Arbiters do not maintain a data set (extra mongod instances in a replica set) and cannot become a primary
+
 * Arbiters offer a +1 vote thus allowing an uneven # of votes; resource cost effective way to select a replica.
 
-* To print out the Replica Set Configuration run the command below - 
-
-`rs.config()`
-
-```
+  
+* To print out the Replica Set Configuration run the command below -
 
 
 ```
+rs.config()
+```
 
+  
+  
 
 * By Default clients read from the primary; however clients can specify a read preference ??????
 
-## The Mongo shell
+  
+
+## How do I interact with MongoDB?
+
 The mongo Shell ...
 
-## .NET Driver
+  
+
+## Can I Use .NET ?
