Updating MongoDB  Notes Post

--- a/_posts/2018-12-18-2018-MongoDB-Notes.md
+++ b/_posts/2018-12-18-2018-MongoDB-Notes.md
@@ -11,9 +11,9 @@ Unfortunately, at the time when I decided to start documenting my experimentatio
 
 ## Context
 
-My organization is currently experimenting with MongoDB to store records that contain information of the modified items (previous value, modified value, field, username, etc) . We've turned to MongoDB since the records will evolve as our product catalog grows.  
+My organization is currently experimenting with MongoDB to store records that contain information of modications made to items within our product catalog (previous value, inserted value, field, username, etc) . We've turned to MongoDB since the records will evolve as our product catalog grows.  
 
-## What is a Replica Set?
+## What is a Replica Set? High Availablity
 
 * A "Replica Set" is a _group of MongoDB instances (3 or more) that maintain the same data set_. This is how MongoDB facilitates high availability.
 
@@ -23,7 +23,7 @@ My organization is currently experimenting with MongoDB to store records that co
 	1. The replica set will have have a primary and two secondaries.
 	2. The replica set will have have a primary, secondary, and an "Arbiter"  
 
-* The rest of the nodes reflect the primaries data set.
+* The rest of the nodes reflect the primaries data set. _The primary is the only node that can receive write operations_
 
 * If the primary node is unavailable, an eligible secondary node will hold an election to elect itself the new primary.
  
@@ -41,7 +41,10 @@ My organization is currently experimenting with MongoDB to store records that co
 rs.config()
 ```
 
-  
+* To find out the running primary run the command below -
+```
+rs.printReplicationInfo()
+```
   
 
 * By Default clients read from the primary; however clients can specify a read preference ??????
