Update to MongoDB notes post

--- a/_posts/2018-12-18-2018-MongoDB-Notes.md
+++ b/_posts/2018-12-18-2018-MongoDB-Notes.md
@@ -17,11 +17,13 @@ My organization is currently experimenting with MongoDB to store records that co
 
 * A "Replica Set" is a _group of MongoDB instances (3 or more) that maintain the same data set_. This is how MongoDB facilitates high availability.
 
-* A Replica set can have multiple nodes reflecting the primaries data set.
+* A Replica set can have multiple secondary nodes reflecting the primaries data set.
 
 * In a Replica set of *3 mongod* instances you must have **one** primary capable of confirming writes. This results in two scenarios:
-	1. The replica set will have have a primary and two secondaries.
-	2. The replica set will have have a primary, secondary, and an "Arbiter"  
+	1. The replica set will have a primary and two secondaries.
+	2. The replica set will have a primary, secondary, and an "Arbiter"  
+
+* The secondary members contain copy of the data from the primary node (replication) and cannot be written to.
 
 * The rest of the nodes reflect the primaries data set. _The primary is the only node that can receive write operations_
 
@@ -35,8 +37,6 @@ My organization is currently experimenting with MongoDB to store records that co
 
   
 * To print out the Replica Set Configuration run the command below -
-
-
 ```
 rs.config()
 ```
