--- a/_posts/2018-12-18-2018-MongoDB-Notes.md
+++ b/_posts/2018-12-18-2018-MongoDB-Notes.md
@@ -7,11 +7,16 @@ comment: false
 
 # MongoDB Notes
 
-Unfortunately, at the time when I decided to start documenting my experimentation with MongoDB, I had already deployed a replica set. This post assumes that you have a working MongoDB instance or you're looking to get an overview of the technology. 
+Unfortunately, at the time when I decided to start documenting my experimentation with MongoDB, I had already deployed a MongoDB Instance. This post assumes that you have a working MongoDB instance or you're looking to get a high level overview of the technology. 
 
 ## Context
 
-My organization is currently experimenting with MongoDB to store records that contain information of modications made to items within our product catalog (previous value, inserted value, field, username, etc) . We've turned to MongoDB since the records will evolve as our product catalog grows.  
+My organization is currently experimenting with MongoDB to store records that contain information of modications made to items within our product catalog (previous value,inserted value, field, username, etc) . We've turned to MongoDB since the records will evolve as our product catalog grows.  
+
+## Collections, Documents ?
+
+**Collections** in simple terms are 'tables' in MongoDB. They hold collections of documents or 'rows of data'. Although you're not bounded by schema in MongoDB, you will still want to group documents with similar structure under a generic collection. 
+
 
 ## What is a Replica Set? High Availablity
 
@@ -58,3 +63,8 @@ The mongo Shell ...
   
 
 ## Can I Use .NET ?
+If you're looking to access the database via .NET you can leverage the (.NET MongoDB Driver)[http://mongodb.github.io/mongo-csharp-driver/].
+
+```
+MongoDB.Driver
+```
