--- a/_posts/2021-05-01-21-Serverless+.NET5+API.md
+++ b/_posts/2021-05-01-21-Serverless+.NET5+API.md
@@ -6,6 +6,12 @@ dateModified: 05-04-21
 comment: false
 ---
 
+<div class="row">
+    <div class="col-auto mx-auto">
+        <img src="https://anthonyliriano.s3.amazonaws.com/lambda-deployment.gif"/>
+    </div>
+</div>
+
 AWS Lambda functions allow developers to run code without creating or managing highly-available infrastructure. There are other ways to deploy your source code, such as uploading the artifacts as .ZIP, but in this tutorial we'll be focusing on deploying the application as a docker container.
 
 In this post, I'll walk through setting up a .NET 5 Web API as a Lambda function and exposing the API using Amazon API Gateway. 
