--- a/_posts/2021-05-01-21-Serverless+.NET5+API.md
+++ b/_posts/2021-05-01-21-Serverless+.NET5+API.md
@@ -1,8 +1,9 @@
 ---
 layout: post
+type: article
 title: Serverless .NET 5 Web API 🔥 🔥 
 tags: [Serverless, AWS, .NET5]
-dateModified: 05-04-21
+dateModified: 05-06-21
 comment: false
 ---
 
@@ -12,20 +13,20 @@ comment: false
     </div>
 </div>
 
-AWS Lambda functions allow developers to run code without creating or managing highly-available infrastructure. There are other ways to deploy your source code, such as uploading the artifacts as .ZIP, but in this tutorial we'll be focusing on deploying the application as a docker container.
+AWS Lambda functions allow developers to run code without creating or managing highly-available infrastructure. As of the creation of this post, there are two ways to deploy your source code as a Lambda Function. Creating a .ZIP archive or packaging the application as docker image. 
+
+Lambda functions can be used as triggers for other aws resources (e.g a file is uploaded to an S3 bucket). They can also consumed by web or mobile applications using something like a RESTful API.
 
 In this post, I'll walk through setting up a .NET 5 Web API as a Lambda function and exposing the API using Amazon API Gateway. 
-
-Lambda functions can be used as triggers for other aws resources (e.g a file is uploaded to an S3 bucket) or consumed via the web or mobile applications.
 
 As always, if you know of a better method for the problems below, find a mistake, have the answer to a question below let me hear about it, i'll update the post <a href="/contact" target="_blank">Contact Form</a>
 
 ### Requirements
 
-- AWS Account : Needed to create Lambda functions, etc.
+- AWS Account
+- AWS CLI 2
 - Visual Studio 2019
 - .NET 5 Framework
-- AWS CLI Installed - Helps to have an enviroment already configured to your aws account.
 
 ### Project Setup
 
